--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/breeze": "^1.18",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
+        "magentron/laravel-blade-lint": "^1.0",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
