--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
+        "fakerphp/faker": "^1.21",
         "laravel/breeze": "^1.18",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "magentron/laravel-blade-lint": "^1.0",
+        "mmo/faker-images": "^0.8.0",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
